added mocha tests and scipts
