# src/controllers/peopleController.ts
@@ -1,34 +1,25 @@
 import { Request, Response } from "express";
-import People, { IPeople } from "../models/People";
+import People, { IPeople } from "../models/people";
+
+const DTO = (people: IPeople[]) => {
+  return people.map(({ type, count }) => ({ type, count }));
+};
 
 export const getPeople = async (req: Request, res: Response): Promise<void> => {
   try {
-    const peopleArray: IPeople[] = await People.find();
-    if (peopleArray.length === 0) {
+    const people: IPeople[] = await People.find();
+    if (people.length === 0) {
       res.status(404).json({ error: "No people found" });
       return;
     }
-    res.json(peopleArray);
+    const totalCount = people.reduce((sum, person) => sum + person.count, 0);
+    res.json({ totalCount, people: DTO(people) });
   } catch (error) {
     res.status(500).json({ error: "Server error" });
   }
 };
 
-// export const createPeople = async (
-//   req: Request,
-//   res: Response
-// ): Promise<void> => {
-//   try {
-//     const peopleArray: IPeople[] = req.body;
-//     const newPeopleArray = await People.insertMany(peopleArray);
-//     res.status(201).json(newPeopleArray);
-//     return;
-//   } catch (error) {
-//     res.status(400).json({ error: "Invalid data" });
-//   }
-// };
-
-export const updatePeople = async (
+export const createPeople = async (
   req: Request,
   res: Response
 ): Promise<void> => {
@@ -37,38 +28,20 @@ export const updatePeople = async (
 
     const updatePromises = peopleArray.map(async (person) => {
       return await People.findOneAndUpdate(
-        { type: person.type }, // Find the document by type
-        { $set: { count: person.count } }, // Update the count field
-        { new: true, upsert: true } // Return the updated document, create if not found
+        { type: person.type },
+        { $set: { count: person.count } },
+        { new: true, upsert: true }
       );
     });
 
     const updatedPeopleArray = await Promise.all(updatePromises);
-    res.status(200).json(updatedPeopleArray);
+    const totalCount = updatedPeopleArray.reduce(
+      (sum, person) => sum + person.count,
+      0
+    );
+    res.status(200).json({ totalCount, people: DTO(updatedPeopleArray) });
     return;
   } catch (error) {
     res.status(400).json({ error: "Invalid data" });
   }
 };
-
-// export const updatePeople = async (
-//   req: Request,
-//   res: Response
-// ): Promise<void> => {
-//   try {
-//     const { id } = req.params;
-//     const { count } = req.body;
-//     const updatedPeople = await People.findByIdAndUpdate(
-//       id,
-//       { count },
-//       { new: true }
-//     );
-//     if (!updatedPeople) {
-//       res.status(404).json({ error: "People not found" });
-//       return;
-//     }
-//     res.json(updatedPeople);
-//   } catch (error) {
-//     res.status(400).json({ error: "Invalid data" });
-//   }
-// };
